<resources>
    <string name="first_intro">Visualization of the Olympiad algorithms</string>
    <string name="sort_intro">Sorting</string>
    <string name="app_name">VisuAlgOl</string>
    <string name="about">Welcome to VisuAlgOl! This application was created to study the Olympiad algorithms in informatics with the support of the Lyceum of the Higher School of Economics. To continue, click the button «Go».</string>
    <string name="go_next">Go</string>
    <string name="soldiers">Soldiers lined up in a row</string>
    <string name="sort_introduction">What is sorting? Sorting is ordering: arranging items in a sequence ordered by some criterion. For example, people at school in pe lessons and in the army are lined up by height, because the order is needed.</string>
    <string name="basic_sort_algo">Basic sort algorithms</string>
    <string name="basic_sort">.....................</string>
    <string name="basic_sort2">.....................</string>
    <string name="shell_sort_intro">Shell sort</string>
    <string name="merge_sort_intro">Merge sort</string>
    <string name="heap_sort_intro">Heap sort</string>
</resources>